# GameTime

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  sdl.hpp
src/core/: game.hpp  meta.hpp  resource.hpp  system.hpp  system_scheduler.hpp
src/core/assets/: asset_io.hpp  asset_server.hpp  assets.hpp  handle.hpp  handle_id.hpp  loader.hpp  plugin.hpp  ref_change.hpp
src/core/assets/asset_io/: asset_io.hpp  asset_io_impl.hpp
src/core/audio/: audio.hpp  audio_loader.hpp  channel.hpp  error.hpp  plugin.hpp  sound.hpp
src/core/components/: components.hpp
src/core/ecs/: commands.hpp  query.hpp  resource.hpp  scheduler.hpp  system.hpp  system_scheduler.hpp  world.hpp
src/core/events/: events.hpp
src/core/game/: default_plugins.hpp  events.hpp  game.hpp  runner.hpp
src/core/input/: input.hpp  keyboard.hpp  mouse.hpp  plugin.hpp
src/core/math/: transform.hpp  vec.hpp
src/core/plugins/: sdl.hpp  time.hpp
src/core/render/: color.hpp  draw.hpp  plugin.hpp  render_context.hpp  system.hpp  texture.hpp
src/core/resources/: resources.hpp
src/core/sprite/: plugin.hpp  sprite.hpp
src/core/systems/: systems.hpp
src/core/task/: task_pool.hpp
src/core/window/: event.hpp  plugin.hpp  system.hpp  window.hpp
src/debug/: debug.hpp
src/ecs/: component.hpp  system.hpp
src/sdl/: plugin.hpp  sdl.hpp  sdl_event.hpp  sdl_img_loader.hpp  sdl_keyboard.hpp  sdl_loader.hpp  sdl_runner.hpp  sdl_window_events_handler.hpp
src/util/: common.hpp  rng.hpp  type_id.hpp  type_map.hpp  uuid.hpp  void_ptr.hpp
src/util/containers/: expected.hpp  hash.hpp  optional.hpp  try.hpp  type_map.hpp  variant.hpp
src/util/memory/: rc.hpp
src/util/ranges/: chain.hpp
src/util/sync/: mpmc.hpp  mutex.hpp  rwlock.hpp
tests/: CMakeLists.txt  test.cpp  test_main.cpp
tests/core-test/: core-test.hpp  game-test.cpp  meta-test.cpp  resource-test.cpp  system-test.cpp  type_map-test.cpp
tests/core-test/assets-test/: asset_server-test.cpp  assets-test.cpp  handle-test.cpp
tests/core-test/assets-test/asset_io-test/: asset_io_impl-test.cpp
tests/core-test/ecs-test/: resource-test.cpp  scheduler-test.cpp  system-test.cpp
tests/core-test/events-test/: events-test.cpp
tests/core-test/game-test/: events-test.cpp  game-test.cpp  runner-test.cpp
tests/core-test/input-test/: input-test.cpp  mouse-test.cpp
tests/core-test/render-test/: texture-test.cpp
tests/sdl-test/: sdl-test.hpp  sdl_event-test.cpp  sdl_img_loader-test.cpp  sdl_loader-test.cpp
tests/ut/: ut.hpp
tests/util-test/: common-test.cpp  meta-test.cpp  rng-test.cpp  type_map-test.cpp  util-test.hpp  uuid-test.cpp
tests/util-test/memory-test/: rc-test.cpp
tests/util-test/ranges-test/: chain-test.cpp
tests/util-test/sync-test/: mutex-test.cpp  rwlock-test.cpp
